First try on calibrate_spot_cautious_params for SABR

--- a/notebooks/parse_spot.ipynb
+++ b/notebooks/parse_spot.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "fd97de04",
    "metadata": {},
    "outputs": [
@@ -23,29 +23,32 @@
     }
    ],
    "source": [
-    "import requests, zipfile, io, pandas as pd, numpy as np\n",
+    "import requests, zipfile, io, pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "from tqdm import tqdm\n",
     "from pathlib import Path\n",
     "\n",
     "INPUTS_DIR = Path.cwd().parent / \"data\" / \"inputs\"\n",
-    "OUTPUT_FILE = INPUTS_DIR / \"spot_full.npy\"\n",
+    "OUTPUT_FILE = INPUTS_DIR / \"spot_full.csv\"\n",
     "START_DATE, END_DATE = \"2023-05-18\", \"2023-09-07\"\n",
     "BASE_URL = \"https://data.binance.vision/data/spot/daily/klines/BTCUSDT/1s/\"\n",
     "\n",
     "def download_and_process_spot():\n",
     "    start, end = datetime.strptime(START_DATE, \"%Y-%m-%d\"), datetime.strptime(END_DATE, \"%Y-%m-%d\")\n",
-    "    all_spot_data = []\n",
-    "    for i in tqdm(range((end - start).days + 1)):\n",
+    "    delta = end - start\n",
+    "    dfs = []\n",
+    "    for i in tqdm(range(delta.days + 1)):\n",
     "        url = BASE_URL + f\"BTCUSDT-1s-{(start + timedelta(days=i)).strftime(\"%Y-%m-%d\")}.zip\"\n",
     "        response = requests.get(url)\n",
     "        with zipfile.ZipFile(io.BytesIO(response.content)) as z:\n",
     "            with z.open(z.namelist()[0]) as f:\n",
-    "                data = pd.read_csv(f, header=None, usecols=[0, 4]).values.astype(float)\n",
-    "                data[:, 0] = (data[:, 0] // 3600000) * 3600000\n",
-    "                all_spot_data.append(data)\n",
+    "                df = pd.read_csv(f, header=None, usecols=[0, 4])\n",
+    "                df.columns = ['timestamp', 'underlying_price']\n",
+    "                df['timestamp'] = pd.to_datetime(df['timestamp'], unit='ms')\n",
+    "                dfs.append(df)\n",
     "\n",
-    "    np.save(OUTPUT_FILE, np.concatenate(all_spot_data))\n",
+    "    full_df = pd.concat(dfs, ignore_index=True)\n",
+    "    full_df.to_csv(OUTPUT_FILE, index=False)\n",
     "\n",
     "download_and_process_spot()"
    ]
